--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">@color/light_green</color>
+    <color name="colorPrimaryDark">@color/dark_green</color>
+    <color name="colorAccent">@color/light_green</color>
+    <color name="light_green">#7085D6CF</color>
+    <color name="text_color">#A8FFFFFF</color>
+    <color name="dark_green">#037857</color>
+    <color name="button_green">#7E0C5742</color>
+    <color name="dark_orange">#966700</color>
 </resources>
