added splash screen

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -40,7 +40,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="60dp"
         app:srcCompat="@android:drawable/ic_input_add"
-        android:visibility="gone"
+        android:visibility="visible"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
