--- a/app/src/main/res/layout/activity_modules.xml
+++ b/app/src/main/res/layout/activity_modules.xml
@@ -12,5 +12,16 @@
     android:layout_height="match_parent"
     android:numColumns="2">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:visibility="visible"
+        />
+
 </GridView>
 </LinearLayout>
