--- a/app/src/main/res/layout/activity_add_module.xml
+++ b/app/src/main/res/layout/activity_add_module.xml
@@ -7,18 +7,6 @@
     tools:context="com.example.learningplatform.AddModuleActivity"
     android:orientation="vertical"
     >
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:visibility="gone">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
-
-    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:backgroundTint="@color/light_green"
+            android:background="@color/light_green"
             app:cornerRadius="10dp"
             android:layout_gravity="center"
             android:paddingVertical="15dp"
@@ -60,10 +48,10 @@
             android:layout_height="wrap_content"
             style="@style/edit_text_style"
             android:layout_marginTop="10dp"
-
+            android:popupBackground="@color/dark_green"
             />
         <EditText
-            android:id="@+id/edtLevel"
+            android:id="@+id/edtModule"
             android:hint="@string/module_name"
             android:layout_marginTop="15dp"
             style="@style/edit_text_style"/>
@@ -73,8 +61,8 @@
             android:layout_height="wrap_content"
             android:text="@string/create"
             android:layout_marginTop="25dp"
-            android:textSize="20sp"
             android:backgroundTint="@color/button_green"
+            android:textSize="20sp"
             app:cornerRadius="10dp"
             android:layout_gravity="center"
             android:paddingVertical="15dp"
