--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -7,17 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.learningplatform.AdminActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
-
-    </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
@@ -38,9 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="80dp"
         app:srcCompat="@android:drawable/ic_input_add"
         android:visibility="visible"
+        app:backgroundTint="@color/dark_green"
+        app:tint="@color/white"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
