--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -38,5 +38,18 @@
             android:textStyle="bold"
             android:gravity="center_horizontal"/>
     </LinearLayout>
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="80dp"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:visibility="visible"
+        app:backgroundTint="@color/dark_green"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/expandableListView"
+        app:layout_constraintEnd_toEndOf="@id/expandableListView"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
