--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -7,27 +7,17 @@
     tools:context=".CreateAccountActivity"
     android:orientation="vertical"
     >
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:visibility="gone">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
-
-    </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginTop="-20dp">
         <ImageView
             android:id="@+id/splashscreen"
             android:layout_width="100dp"
-            android:layout_height="150dp"
+            android:layout_height="80dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/baseline_menu_book_24"
             android:layout_gravity="center"/>
