--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:layout_gravity="center"
     android:layout_margin="0dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
     android:background="@drawable/circle"
     android:padding="15dp"
-    >
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center_horizontal">
 
         <ImageView
@@ -26,10 +23,41 @@
             android:src="@drawable/cat" />
 
         <TextView
+            android:id="@+id/moduleLockIcon"
+            android:layout_width="25dp"
+            android:layout_height="30dp"
+            android:gravity="right"
+            android:drawableStart="@drawable/baseline_lock_24"
+            android:layout_marginStart="-30dp"
+            android:visibility="gone"
+            android:layout_toRightOf="@+id/moduleIcon"
+            android:background="@drawable/round_bgicon"
+            android:drawablePadding="10dp"
+            />
+        <TextView
+            android:id="@+id/moduleUnlockIcon"
+            android:layout_width="25dp"
+            android:layout_height="30dp"
+            android:gravity="right"
+            android:drawableStart="@drawable/baseline_lock_open_24"
+            android:layout_marginStart="-30dp"
+            android:visibility="gone"
+            android:layout_toRightOf="@+id/moduleIcon"
+            android:background="@drawable/round_bgicon"
+            android:drawablePadding="20dp"
+            />
+
+        <TextView
             android:id="@+id/moduleName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textAlignment="center" />
-    </LinearLayout>
+            android:layout_alignBottom="@+id/moduleIcon"
+            android:background="@drawable/text_round_label"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="10dp"
+            />
+
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
