--- a/app/src/main/res/layout/recycler_levels.xml
+++ b/app/src/main/res/layout/recycler_levels.xml
@@ -25,6 +25,7 @@
         android:id="@+id/lnyLayout"
         android:padding="10dp">
         <ImageView
+            android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/baseline_stairs_24"/>
