--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -7,7 +7,13 @@
     tools:context="com.example.learningplatform.ContentActivity"
     android:id="@+id/container"
     android:padding="20dp">
-
+    <Button
+        android:id="@+id/btnQuiz"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Quiz"
+        tools:ignore="MissingConstraints"
+        android:visibility="gone"/>
     <ExpandableListView
         android:id="@+id/expandableListView"
         android:layout_height="match_parent"
@@ -15,6 +21,7 @@
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"
+        android:layout_marginTop="40dp"
         />
     <LinearLayout
         android:id="@+id/lnyLayout"
