--- a/app/src/main/res/menu/menu_learner.xml
+++ b/app/src/main/res/menu/menu_learner.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <item
+        android:id="@+id/action_profile"
+        android:icon="@drawable/baseline_logout_24"
+        android:title="@string/profile"
+        />
+    <item
         android:id="@+id/action_logout"
         android:icon="@drawable/baseline_logout_24"
         android:title="@string/logout"
