--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btnQuiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Quiz"
+        android:text="@string/quiz"
         tools:ignore="MissingConstraints"
         android:visibility="gone"/>
     <ExpandableListView
