--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -11,14 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
-
+        <Spinner
+            android:id="@+id/spnFilterType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/edit_text_style"
+            android:entries="@array/reportFilters"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="visible"
+            android:layout_marginTop="10dp"
             >
-
             <EditText
                 android:layout_width="140dp"
                 android:id="@+id/start"
